--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@
 a {
 	text-decoration: none;
 }
+img {
+	max-width: 100%;
+}
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	display: grid;
@@ -78,6 +81,7 @@ body {
 .stories_section {
 	display: flex;
 	justify-content: space-around;
+	margin-bottom: 50px;
 }
 .story {
 	cursor: pointer;
@@ -114,6 +118,101 @@ body {
 	text-overflow: ellipsis;
 }
 
+/* Post Design */
+.post {
+	width: 400px;
+	margin: 0 auto;
+	border-bottom: 1px solid #d0cdcd;
+}
+.post_upper {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 13px 0;
+}
+.post_upper img {
+	width: 35px;
+	height: 35px;
+	border-radius: 30px;
+	margin-right: 10px;
+	cursor: pointer;
+}
+.post_upper p {
+	font-size: 14px;
+	color: #636363;
+	cursor: pointer;
+}
+.post_img {
+	border-radius: 5px;
+	background-image: var(--bg-img);
+	height: 500px;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	user-select: none;
+}
+.post_lower {
+	display: flex;
+	justify-content: space-between;
+	padding: 15px 0;
+}
+.post_lower .action_icon {
+	font-size: 27px;
+}
+.right_action .action_icon {
+	margin-right: 8px;
+}
+.likes_count {
+	font-size: 15px;
+	font-weight: bold;
+	padding-top: 5px;
+}
+
+/* Like button functional css */
+.like_icon.liked {
+	font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
+	color: red !important;
+	animation: lieButtonAnimation 0.4s 1 ease-in-out;
+}
+@keyframes lieButtonAnimation {
+	0% {
+		transform: scale(1);
+	}
+	50% {
+		transform: scale(1.2);
+	}
+	100% {
+		transform: scale(1);
+	}
+}
+
+/* In Picture Love icon function */
+.inpicture_love_icon {
+	font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
+	color: rgba(255, 255, 255, 0.9);
+	font-size: 90px !important;
+	user-select: none;
+	opacity: 0;
+	transform: scale(0);
+}
+.inpicture_love_icon.active {
+	animation: inPictureIconAnimation 1s 2 cubic-bezier(0.95, 0.29, 0.01, 0.85)
+		alternate;
+}
+@keyframes inPictureIconAnimation {
+	0% {
+		opacity: 0.1;
+		transform: scale(0);
+	}
+	100% {
+		opacity: 1;
+		transform: scale(1);
+	}
+}
 /* ==========================
      MIDDLE SECTION END
      ========================= */
@@ -195,4 +294,13 @@ body {
 }
 .align-center {
 	align-items: center;
+}
+.action_icon {
+	color: #151515;
+	cursor: pointer;
+	transition: 0.2s;
+	user-select: none;
+}
+.action_icon:hover {
+	color: #888888;
 }
