--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin: 0 8px;
 }
 .story:before {
 	content: "";
@@ -303,4 +304,44 @@ body {
 }
 .action_icon:hover {
 	color: #888888;
+}
+
+@media screen and (max-width: 1075px) {
+	.right_sidebar {
+		display: none;
+	}
+	body {
+		grid-template-columns: 1fr 3fr;
+	}
+}
+
+@media screen and (max-width: 845px) {
+	.left_sidebar {
+		display: none;
+	}
+	body {
+		grid-template-columns: 1fr;
+	}
+}
+@media screen and (max-width: 660px) {
+	.story:nth-child(5) {
+		display: none;
+	}
+	.story:nth-child(6) {
+		display: none;
+	}
+}
+@media screen and (max-width: 510px) {
+	.story:nth-child(7) {
+		display: none;
+	}
+	.story:nth-child(8) {
+		display: none;
+	}
+	.post {
+		width: 100%;
+	}
+	.post_img {
+		height: 300px;
+	}
 }
